--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 remote_theme: b2a3e8/jekyll-theme-console
 title: JLPT Senpai
 header_pages:
+  - index.md
   - N5.md
-  - About.md
+  - about.md
 style: dark
 footer: 'project maintained by <a href="https://github.com/Devansh3712">devansh</a>'
